--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:clipToPadding="false"
-    tools:context=".activity.RegisterActivity">
+    tools:context=".ui.RegisterActivity">
 
     <ImageView
+        android:id="@+id/imBackPress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/close"
-        android:onClick="btBackClick"
         android:padding="6dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -98,7 +98,6 @@
             android:background="@drawable/bg_rounded_6dp"
             android:backgroundTint="@color/billit_blue"
             android:elevation="5dp"
-            android:onClick="btRegisterClick"
             android:text="@string/register"
             android:textColor="@color/text_white" />
 
