--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorPrimary"
     android:clipToPadding="false"
     android:padding="@dimen/activity_margin"
-    tools:context=".ui.ForgotPasswordActivity">
+    tools:context=".ui.auth.ForgotPasswordActivity">
 
     <ImageView
         android:id="@+id/imBackPress"
