--- a/app/src/main/res/layout/popup_new_friend.xml
+++ b/app/src/main/res/layout/popup_new_friend.xml
@@ -1,64 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout4"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_rounded_6dp"
     android:backgroundTint="@color/colorPrimary"
-    android:clipToPadding="false"
-    android:orientation="vertical">
+    android:clipToPadding="false">
 
 
     <TextView
         android:id="@+id/tv_title_friend_popup"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
         android:background="@color/colorPrimaryDark"
         android:gravity="center"
+        android:padding="16dp"
         android:text="@string/add_friend_title"
         android:textAlignment="center"
         android:textColor="@color/text_white"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/et_name_friend"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_name_friend"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
         android:autofillHints="@string/name"
         android:ems="10"
         android:hint="@string/name"
         android:inputType="textPersonName"
-        android:maxLength="25" />
+        android:maxLength="25"
+        app:layout_constraintBottom_toTopOf="@+id/bt_save_friend"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title_friend_popup" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <Button
+        android:id="@+id/bt_cancel_friend"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:orientation="horizontal">
+        android:background="@color/billit_red"
+        android:text="@android:string/cancel"
+        android:textColor="@color/text_white"
+        app:layout_constraintBaseline_toBaselineOf="@+id/bt_save_friend"
+        app:layout_constraintEnd_toStartOf="@+id/bt_save_friend"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/bt_cancel_friend"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/billit_red"
-            android:text="@android:string/cancel"
-            android:textColor="@color/text_white" />
-
-        <Button
-            android:id="@+id/bt_save_friend"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/billit_blue"
-            android:text="@string/save"
-            android:textAllCaps="false"
-            android:textColor="@color/text_white" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/bt_save_friend"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/billit_blue"
+        android:text="@string/save"
+        android:textAllCaps="false"
+        android:textColor="@color/text_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bt_cancel_friend"
+        app:layout_constraintTop_toBottomOf="@+id/et_name_friend" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
